--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </nav>
       <address class="address">
         <ul>
-          <li>
+          <li class="lis">
             <a class="link-addres" href="mailto:info@devstudio.com">
               info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="lis">
             <a class="link-addres" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
