--- a/index.html
+++ b/index.html
@@ -14,31 +14,33 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-style">Studio</span></a
-        >
-        <ul class="link">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul>
-          <li class="lis">
-            <a class="link-addres" href="mailto:info@devstudio.com">
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="lis">
-            <a class="link-addres" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header-container">
+      <div class="header-wrap">
+        <nav>
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-style">Studio</span></a
+          >
+          <ul class="link">
+            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul>
+            <li class="lis">
+              <a class="link-addres" href="mailto:info@devstudio.com">
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="lis">
+              <a class="link-addres" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="sekcja">
