--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="header-container">
       <div class="header-wrap">
-        <nav>
+        <nav class="navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-style">Studio</span></a
           >
