--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a class="logo" href="./index.html"
             >Web<span class="logo-style">Studio</span></a
           >
-          <ul class="link">
+          <ul class="menu-nav">
             <li><a href="./index.html" class="link">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a></li>
