--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header-container">
-      <div class="header-wrap">
+      <div class="container header-wrap">
         <nav class="navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-style">Studio</span></a
