--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul>
+          <ul class="ul-list">
             <li class="lis">
               <a class="link-addres" href="mailto:info@devstudio.com">
                 info@devstudio.com</a
