--- a/index.html
+++ b/index.html
@@ -49,39 +49,39 @@
           <button class="button" type="button">Order Service</button>
         </section>
       </div>
-        <section>
-          <h2>nie może być pusty</h2>
-          <ul>
-            <li>
-              <h3 class="header-trzy">Strategy</h3>
-              <p class="pee">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li>
-              <h3 class="header-trzy">Punctuality</h3>
-              <p class="pee">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li>
-              <h3 class="header-trzy">Diligence</h3>
-              <p class="pee">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li>
-              <h3 class="header-trzy">Technologies</h3>
-              <p class="pee">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </section>
+      <section>
+        <h2>nie może być pusty</h2>
+        <ul>
+          <li>
+            <h3 class="header-trzy">Strategy</h3>
+            <p class="pee">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3 class="header-trzy">Punctuality</h3>
+            <p class="pee">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3 class="header-trzy">Diligence</h3>
+            <p class="pee">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="header-trzy">Technologies</h3>
+            <p class="pee">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
       <section class="sekcja-trzy">
         <h2 class="header-dwa">Our Team</h2>
