--- a/index.html
+++ b/index.html
@@ -190,14 +190,16 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-style-dwa">Studio</span></a
-      >
-      <p class="pepa">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+    <div class="container">
+      <footer class="footer">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-style-dwa">Studio</span></a
+        >
+        <p class="pepa">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
