--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="logo-footer" href="./index.html"
           >Web<span class="logo-style-dwa">Studio</span></a
         >
         <p class="pepa">
