--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="lis-dwa">
               <h3 class="header-trzy">Punctuality</h3>
               <p class="pee">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="lis-dwa">
               <h3 class="header-trzy">Diligence</h3>
               <p class="pee">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="lis-dwa">
               <h3 class="header-trzy">Technologies</h3>
               <p class="pee">
                 Design practice focused on digital experiences. We bring forth a
