--- a/index.html
+++ b/index.html
@@ -87,41 +87,48 @@
       </section>
 
       <section class="sekcja-trzy">
-        <h2 class="header-dwa">Our Team</h2>
-        <ul>
-          <li class="lis">
-            <img src="./images/Mark.jpg" alt="Mark" width="264" height="260" />
+        <div class="container">
+          <h2 class="header-dwa">Our Team</h2>
+          <ul class="ul-list-dwa">
+            <li class="lis">
+              <img
+                src="./images/Mark.jpg"
+                alt="Mark"
+                width="264"
+                height="260"
+              />
 
-            <h3 class="header-trzy">Mark Guerrero</h3>
-            <p class="pee">Product Designer</p>
-          </li>
-          <li class="lis">
-            <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
+              <h3 class="header-trzy">Mark Guerrero</h3>
+              <p class="pee">Product Designer</p>
+            </li>
+            <li class="lis">
+              <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
 
-            <h3 class="header-trzy">Tom Ford</h3>
-            <p class="pee">Frontend Developer</p>
-          </li>
-          <li class="lis">
-            <img
-              src="./images/Camila.jpg"
-              alt="Camila"
-              width="264"
-              height="260"
-            />
-            <h3 class="header-trzy">Camila Garcia</h3>
-            <p class="pee">Marketing</p>
-          </li>
-          <li class="lis">
-            <img
-              src="./images/Daniel.jpg"
-              alt="Daniel"
-              width="264"
-              height="260"
-            />
-            <h3 class="header-trzy">Daniel Wilson</h3>
-            <p class="pee">UI Designer</p>
-          </li>
-        </ul>
+              <h3 class="header-trzy">Tom Ford</h3>
+              <p class="pee">Frontend Developer</p>
+            </li>
+            <li class="lis">
+              <img
+                src="./images/Camila.jpg"
+                alt="Camila"
+                width="264"
+                height="260"
+              />
+              <h3 class="header-trzy">Camila Garcia</h3>
+              <p class="pee">Marketing</p>
+            </li>
+            <li class="lis">
+              <img
+                src="./images/Daniel.jpg"
+                alt="Daniel"
+                width="264"
+                height="260"
+              />
+              <h3 class="header-trzy">Daniel Wilson</h3>
+              <p class="pee">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
         <h2 class="header-dwa">Our Portfolio</h2>
