--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
           <h2 class="header-dwa">Our Team</h2>
           <ul class="ul-list-dwa">
-            <li class="lis">
+            <li class="li-dwa">
               <img
                 src="./images/Mark.jpg"
                 alt="Mark"
