--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
                 width="264"
                 height="260"
               />
-
-              <h3 class="header-trzy">Mark Guerrero</h3>
-              <p class="pee">Product Designer</p>
+              <div>
+                <h3 class="header-trzy">Mark Guerrero</h3>
+                <p class="pee">Product Designer</p>
+              </div>
             </li>
             <li class="lis">
               <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
