--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
             </li>
             <li class="lis">
               <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
-
-              <h3 class="header-trzy">Tom Ford</h3>
-              <p class="pee">Frontend Developer</p>
+              <div>
+                <h3 class="header-trzy">Tom Ford</h3>
+                <p class="pee">Frontend Developer</p>
+              </div>
             </li>
             <li class="lis">
               <img
@@ -115,8 +116,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="header-trzy">Camila Garcia</h3>
-              <p class="pee">Marketing</p>
+              <div>
+                <h3 class="header-trzy">Camila Garcia</h3>
+                <p class="pee">Marketing</p>
+              </div>
             </li>
             <li class="lis">
               <img
@@ -125,8 +128,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="header-trzy">Daniel Wilson</h3>
-              <p class="pee">UI Designer</p>
+              <div>
+                <h3 class="header-trzy">Daniel Wilson</h3>
+                <p class="pee">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
