--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="person">
                 <h3 class="header-trzy">Mark Guerrero</h3>
                 <p class="pee">Product Designer</p>
               </div>
             </li>
             <li class="lis">
               <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
-              <div>
+              <div class="person">
                 <h3 class="header-trzy">Tom Ford</h3>
                 <p class="pee">Frontend Developer</p>
               </div>
@@ -116,7 +116,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="person">
                 <h3 class="header-trzy">Camila Garcia</h3>
                 <p class="pee">Marketing</p>
               </div>
@@ -128,7 +128,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="person">
                 <h3 class="header-trzy">Daniel Wilson</h3>
                 <p class="pee">UI Designer</p>
               </div>
