--- a/index.html
+++ b/index.html
@@ -137,74 +137,76 @@
           </ul>
         </div>
       </section>
-      <section>
-        <h2 class="header-dwa">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/app.jpg"
-              alt="bankingapp"
-              width="360"
-              height="300"
-            />
-            <h3 class="header-trzy">Banking App</h3>
+      <section class="sekcja-cztery">
+        <div>
+          <h2 class="header-dwa">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/app.jpg"
+                alt="bankingapp"
+                width="360"
+                height="300"
+              />
+              <h3 class="header-trzy">Banking App</h3>
 
-            <p class="pee">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/phone_1.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="header-trzy">Cashless Payment</h3>
+              <p class="pee">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/phone_1.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="header-trzy">Cashless Payment</h3>
 
-            <p class="pee">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/laptop.jpg"
-              alt="MeditationApp"
-              width="360"
-              height="300"
-            />
-            <h3 class="header-trzy">Meditation App</h3>
+              <p class="pee">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/laptop.jpg"
+                alt="MeditationApp"
+                width="360"
+                height="300"
+              />
+              <h3 class="header-trzy">Meditation App</h3>
 
-            <p class="pee">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/car.jpg"
-              alt="TaxiService"
-              width="360"
-              height="300"
-            />
-            <h3 class="header-trzy">Taxi Service</h3>
+              <p class="pee">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/car.jpg"
+                alt="TaxiService"
+                width="360"
+                height="300"
+              />
+              <h3 class="header-trzy">Taxi Service</h3>
 
-            <p class="pee">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/phone.jpg"
-              alt="ScreenILLustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="header-trzy">Screen Illustrations</h3>
-            <p class="pee">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/woman.jpg"
-              alt="OnlineCourses"
-              width="360"
-              height="300"
-            />
-            <h3 class="header-trzy">Online Courses</h3>
-            <p class="pee">Marketing</p>
-          </li>
-        </ul>
+              <p class="pee">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/phone.jpg"
+                alt="ScreenILLustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="header-trzy">Screen Illustrations</h3>
+              <p class="pee">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/woman.jpg"
+                alt="OnlineCourses"
+                width="360"
+                height="300"
+              />
+              <h3 class="header-trzy">Online Courses</h3>
+              <p class="pee">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
