--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         </div>
       </section>
       <section class="sekcja-cztery">
-        <div>
+        <div class="container">
           <h2 class="header-dwa">Our Portfolio</h2>
-          <ul>
+          <ul class="ul-list-trzy">
             <li>
               <img
                 src="./images/app.jpg"
