--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
                 height="260"
               />
 
-              <div class="person">
+              <div class="personal">
                 <h3 class="header-trzy">Mark Guerrero</h3>
                 <p class="pee">Product Designer</p>
               </div>
             </li>
             <li class="lis">
               <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
-              <div class="person">
+              <div class="personal">
                 <h3 class="header-trzy">Tom Ford</h3>
                 <p class="pee">Frontend Developer</p>
               </div>
@@ -117,7 +117,7 @@
                 width="264"
                 height="260"
               />
-              <div class="person">
+              <div class="personal">
                 <h3 class="header-trzy">Camila Garcia</h3>
                 <p class="pee">Marketing</p>
               </div>
@@ -129,7 +129,7 @@
                 width="264"
                 height="260"
               />
-              <div class="person">
+              <div class="personal">
                 <h3 class="header-trzy">Daniel Wilson</h3>
                 <p class="pee">UI Designer</p>
               </div>
