--- a/index.html
+++ b/index.html
@@ -141,16 +141,17 @@
         <div class="container">
           <h2 class="header-dwa">Our Portfolio</h2>
           <ul class="ul-list-trzy">
-            <li>
+            <li class="li-trzy">
               <img
                 src="./images/app.jpg"
                 alt="bankingapp"
                 width="360"
                 height="300"
               />
-              <h3 class="header-trzy">Banking App</h3>
-
-              <p class="pee">App</p>
+              <div class="appi">
+                <h3 class="header-trzy">Banking App</h3>
+                <p class="pee">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -159,9 +160,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="header-trzy">Cashless Payment</h3>
-
-              <p class="pee">Marketing</p>
+              <div class="appi">
+                <h3 class="header-trzy">Cashless Payment</h3>
+                <p class="pee">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -170,9 +172,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="header-trzy">Meditation App</h3>
-
-              <p class="pee">App</p>
+              <div class="appi">
+                <h3 class="header-trzy">Meditation App</h3>
+                <p class="pee">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -181,9 +184,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="header-trzy">Taxi Service</h3>
-
-              <p class="pee">Marketing</p>
+              <div class="appi">
+                <h3 class="header-trzy">Taxi Service</h3>
+                <p class="pee">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -192,8 +196,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="header-trzy">Screen Illustrations</h3>
-              <p class="pee">Design</p>
+              <div class="appi">
+                <h3 class="header-trzy">Screen Illustrations</h3>
+                <p class="pee">Design</p>
+              </div>
             </li>
             <li>
               <img
@@ -202,8 +208,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="header-trzy">Online Courses</h3>
-              <p class="pee">Marketing</p>
+              <div class="appi">
+                <h3 class="header-trzy">Online Courses</h3>
+                <p class="pee">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
