--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <p class="pee">App</p>
               </div>
             </li>
-            <li>
+            <li class="li-trzy">
               <img
                 src="./images/phone_1.jpg"
                 alt="Cashless Payment"
@@ -165,7 +165,7 @@
                 <p class="pee">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="li-trzy">
               <img
                 src="./images/laptop.jpg"
                 alt="MeditationApp"
@@ -177,7 +177,7 @@
                 <p class="pee">App</p>
               </div>
             </li>
-            <li>
+            <li class="li-trzy">
               <img
                 src="./images/car.jpg"
                 alt="TaxiService"
@@ -189,7 +189,7 @@
                 <p class="pee">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="li-trzy">
               <img
                 src="./images/phone.jpg"
                 alt="ScreenILLustrations"
@@ -201,7 +201,7 @@
                 <p class="pee">Design</p>
               </div>
             </li>
-            <li>
+            <li class="li-trzy">
               <img
                 src="./images/woman.jpg"
                 alt="OnlineCourses"
