--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                 <p class="pee">Product Designer</p>
               </div>
             </li>
-            <li class="lis">
+            <li class="li-dwa">
               <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
               <div class="personal">
                 <h3 class="header-trzy">Tom Ford</h3>
                 <p class="pee">Frontend Developer</p>
               </div>
             </li>
-            <li class="lis">
+            <li class="li-dwa">
               <img
                 src="./images/Camila.jpg"
                 alt="Camila"
@@ -122,7 +122,7 @@
                 <p class="pee">Marketing</p>
               </div>
             </li>
-            <li class="lis">
+            <li class="li-dwa">
               <img
                 src="./images/Daniel.jpg"
                 alt="Daniel"
