--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="Description" content="WebStudio" />
     <title>WebStudio</title>
